--- a/src/components/Equipo.css
+++ b/src/components/Equipo.css
@@ -76,4 +76,7 @@
 @media (max-width:700px){
   .team-grid{ grid-template-columns: 1fr; }
   .team-card{ flex-direction:row; }
+  .center {
+    font-size: 16px;
+  }
 }
