--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -169,3 +169,16 @@
     font-size: 15px;
   }
 }
+
+/* ====== ANIMACIÓN NAVBAR AL SCROLLEAR ====== */
+.ipn-nav {
+  transition: transform 0.3s ease;
+}
+
+.nav-hidden {
+  transform: translateY(-100%);
+}
+
+.nav-visible {
+  transform: translateY(0);
+}
